--- a/package/database_universe/pubspec.yaml
+++ b/package/database_universe/pubspec.yaml
@@ -1,7 +1,6 @@
 name: 'database_universe'
 description: 'Database Universe Library for help you create project flutter or dart'
-
-ersion: '0.0.0'
+version: '0.0.1'
 homepage: 'https://github.com/azkadev/database_universe'
 repository: 'https://github.com/azkadev/database_universe'
 issue_tracker: 'https://github.com/azkadev/database_universe/issues'
@@ -17,10 +16,12 @@ platforms:
   windows: null
 environment: 
   sdk: '^3.2.3'
-dependencies:
-  general_lib: ^0.0.37
-  path: ^1.9.0
-  system_info_fetch: ^0.0.14
-dev_dependencies:
-  lints: '^2.1.0'
-  test: '^1.24.0'
+dependencies: 
+  general_lib: '^0.0.40'
+  path: '^1.9.0'
+  system_info_fetch: '^0.0.18'
+  http: '^1.2.1'
+  collection: '^1.18.0'
+dev_dependencies: 
+  lints: '^3.0.0'
+  test: '^1.24.0' 
