--- a/package/database_universe_assets_flutter/pubspec.yaml
+++ b/package/database_universe_assets_flutter/pubspec.yaml
@@ -3,7 +3,7 @@ description: 'Database Universe Library for help you create project flutter or d
 version: '0.0.0'
 homepage: 'https://github.com/azkadev/database_universe'
 environment: 
-  sdk: '>=3.3.0 <4.0.0'
+  sdk: '>=3.3.3 <4.0.0'
   flutter: '>=1.17.0'
 dependencies: 
   flutter: 
@@ -25,3 +25,6 @@ platforms:
   macos: null
   web: null
   windows: null
+publish_to: 'none'
+dependency_overrides: 
+  pointycastle: '3.8.0'
