--- a/package/database_universe_cli/pubspec.yaml
+++ b/package/database_universe_cli/pubspec.yaml
@@ -15,7 +15,10 @@ platforms:
   web: null
   windows: null
 environment: 
-  sdk: '^3.2.3'
+  sdk: '>=3.3.3 <4.0.0'
 dev_dependencies: 
   lints: '^2.1.0'
   test: '^1.24.0'
+publish_to: 'none'
+dependency_overrides: 
+  pointycastle: '3.8.0'
