--- a/package/database_universe_flutter/pubspec.yaml
+++ b/package/database_universe_flutter/pubspec.yaml
@@ -15,13 +15,13 @@ platforms:
   web: null
   windows: null
 environment: 
-  sdk: '>=3.2.3 <4.0.0'
+  sdk: '>=3.3.3 <4.0.0'
   flutter: '>=1.17.0'
 dependencies: 
   flutter: 
     sdk: 'flutter'
-  general_lib: '^0.0.38'
-  general_lib_flutter: '^0.0.20'
+  general_lib: '^0.0.42'
+  general_lib_flutter: '^0.0.22'
   path: '^1.9.0'
   universal_io: '^2.2.2'
 dev_dependencies: 
@@ -29,3 +29,6 @@ dev_dependencies:
     sdk: 'flutter'
   flutter_lints: '^2.0.0'
 flutter: null
+publish_to: 'none'
+dependency_overrides: 
+  pointycastle: '3.8.0'
