--- a/package/database_universe_isar_scheme/pubspec.yaml
+++ b/package/database_universe_isar_scheme/pubspec.yaml
@@ -2,7 +2,7 @@ name: 'database_universe_isar_scheme'
 description: 'Database Universe Library for help you create project flutter or dart'
 version: '0.0.0'
 environment: 
-  sdk: '^3.3.0'
+  sdk: '>=3.3.3 <4.0.0'
 dependencies: null
 dev_dependencies: 
   lints: '^3.0.0'
@@ -20,3 +20,6 @@ platforms:
   macos: null
   web: null
   windows: null
+publish_to: 'none'
+dependency_overrides: 
+  pointycastle: '3.8.0'
