--- a/package/database_universe_linux/pubspec.yaml
+++ b/package/database_universe_linux/pubspec.yaml
@@ -15,7 +15,7 @@ platforms:
   web: null
   windows: null
 environment: 
-  sdk: '>=3.2.3 <4.0.0'
+  sdk: '>=3.3.3 <4.0.0'
   flutter: '>=1.17.0'
 dependencies: 
   flutter: 
@@ -25,3 +25,6 @@ dev_dependencies:
     sdk: 'flutter'
   flutter_lints: '^2.0.0'
 flutter: null
+publish_to: 'none'
+dependency_overrides: 
+  pointycastle: '3.8.0'
