--- a/package/database_universe_dart/pubspec.yaml
+++ b/package/database_universe_dart/pubspec.yaml
@@ -7,6 +7,7 @@ issue_tracker: 'https://github.com/azkadev/database_universe/issues'
 documentation: 'https://github.com/azkadev/database_universe/tree/main/docs'
 funding: 
   - 'https://github.com/sponsors/azkadev'
+  - 'https://github.com/sponsors/generalfoss'
 platforms: 
   android: null
   ios: null
@@ -19,14 +20,14 @@ environment:
 dependencies: 
   path: '^1.9.0'
   universal_io: '^2.2.2'
-  mason_logger: '^0.2.15'
+  mason_logger: '^0.3.1'
   collection: '^1.18.0'
   yaml: '^3.1.2'
   yaml_writer: '^2.0.0'
-  general_lib: '^0.0.44'
+  general_lib: '^0.0.46'
 dev_dependencies: 
-  lints: '^2.1.0'
-  test: '^1.24.0'
+  lints: '^4.0.0'
+  test: 'any'
 executables: 
   database_universe_dart: 'database_universe_dart'
 publish_to: 'none'
