--- a/package/database_universe_isar_scheme/pubspec.yaml
+++ b/package/database_universe_isar_scheme/pubspec.yaml
@@ -5,14 +5,15 @@ environment:
   sdk: '>=3.3.3 <4.0.0'
 dependencies: {}
 dev_dependencies: 
-  lints: '^3.0.0'
-  test: '^1.24.0'
+  lints: '^4.0.0'
+  test: 'any'
 repository: 'https://github.com/azkadev/database_universe'
 homepage: 'https://github.com/azkadev/database_universe'
 issue_tracker: 'https://github.com/azkadev/database_universe/issues'
 documentation: 'https://github.com/azkadev/database_universe/tree/main/docs'
 funding: 
   - 'https://github.com/sponsors/azkadev'
+  - 'https://github.com/sponsors/generalfoss'
 platforms: 
   android: null
   ios: null
