--- a/package/database_universe_isar_scheme/pubspec.yaml
+++ b/package/database_universe_isar_scheme/pubspec.yaml
@@ -1,20 +1,20 @@
 name: 'database_universe_isar_scheme'
 description: 'Database Universe Library for help you create project flutter or dart'
 version: '0.0.0'
-environment: 
+environment:
   sdk: '>=3.3.3 <4.0.0'
 dependencies: {}
-dev_dependencies: 
-  lints: '^4.0.0'
+dev_dependencies:
+  lints: '^5.0.0'
   test: 'any'
 repository: 'https://github.com/azkadev/database_universe'
 homepage: 'https://github.com/azkadev/database_universe'
 issue_tracker: 'https://github.com/azkadev/database_universe/issues'
 documentation: 'https://github.com/azkadev/database_universe/tree/main/docs'
-funding: 
+funding:
   - 'https://github.com/sponsors/azkadev'
   - 'https://github.com/sponsors/generalfoss'
-platforms: 
+platforms:
   android: null
   ios: null
   linux: null
@@ -22,5 +22,6 @@ platforms:
   web: null
   windows: null
 publish_to: 'none'
-dependency_overrides: 
+dependency_overrides:
   pointycastle: '3.8.0'
+  mime: '^2.0.0'
