--- a/package/database_universe/pubspec.yaml
+++ b/package/database_universe/pubspec.yaml
@@ -5,27 +5,28 @@ homepage: 'https://github.com/azkadev/database_universe'
 repository: 'https://github.com/azkadev/database_universe'
 issue_tracker: 'https://github.com/azkadev/database_universe/issues'
 documentation: 'https://github.com/azkadev/database_universe/tree/main/docs'
-funding: 
+funding:
   - 'https://github.com/sponsors/azkadev'
   - 'https://github.com/sponsors/generalfoss'
-platforms: 
+platforms:
   android: null
   ios: null
   linux: null
   macos: null
   web: null
   windows: null
-environment: 
+environment:
   sdk: '>=3.3.3 <4.0.0'
-dependencies: 
-  general_lib: '^0.0.46'
+dependencies:
+  general_lib: '^0.0.49'
   path: '^1.9.0'
-  system_info_fetch: '^0.0.24'
-  http: '^1.2.1'
+  http: '^1.2.2'
   collection: '^1.18.0'
-dev_dependencies: 
-  lints: '^4.0.0'
+  system_information: '^0.0.3'
+dev_dependencies:
+  lints: '^5.0.0'
   test: 'any'
 publish_to: 'none'
-dependency_overrides: 
+dependency_overrides:
   pointycastle: '3.8.0'
+  mime: '^2.0.0'
