--- a/package/database_universe_dart/pubspec.yaml
+++ b/package/database_universe_dart/pubspec.yaml
@@ -5,31 +5,32 @@ homepage: 'https://github.com/azkadev/database_universe'
 repository: 'https://github.com/azkadev/database_universe'
 issue_tracker: 'https://github.com/azkadev/database_universe/issues'
 documentation: 'https://github.com/azkadev/database_universe/tree/main/docs'
-funding: 
+funding:
   - 'https://github.com/sponsors/azkadev'
   - 'https://github.com/sponsors/generalfoss'
-platforms: 
+platforms:
   android: null
   ios: null
   linux: null
   macos: null
   web: null
   windows: null
-environment: 
+environment:
   sdk: '>=3.3.3 <4.0.0'
-dependencies: 
+dependencies:
   path: '^1.9.0'
   universal_io: '^2.2.2'
   mason_logger: '^0.3.1'
   collection: '^1.18.0'
   yaml: '^3.1.2'
   yaml_writer: '^2.0.0'
-  general_lib: '^0.0.46'
-dev_dependencies: 
-  lints: '^4.0.0'
+  general_lib: '^0.0.49'
+dev_dependencies:
+  lints: '^5.0.0'
   test: 'any'
-executables: 
+executables:
   database_universe_dart: 'database_universe_dart'
 publish_to: 'none'
-dependency_overrides: 
+dependency_overrides:
   pointycastle: '3.8.0'
+  mime: '^2.0.0'
