--- a/package/database_universe_flutter/pubspec.yaml
+++ b/package/database_universe_flutter/pubspec.yaml
@@ -5,31 +5,32 @@ homepage: 'https://github.com/azkadev/database_universe'
 repository: 'https://github.com/azkadev/database_universe'
 issue_tracker: 'https://github.com/azkadev/database_universe/issues'
 documentation: 'https://github.com/azkadev/database_universe/tree/main/docs'
-funding: 
+funding:
   - 'https://github.com/sponsors/azkadev'
   - 'https://github.com/sponsors/generalfoss'
-platforms: 
+platforms:
   android: null
   ios: null
   linux: null
   macos: null
   web: null
   windows: null
-environment: 
+environment:
   sdk: '>=3.3.3 <4.0.0'
   flutter: '>=1.17.0'
-dependencies: 
-  flutter: 
+dependencies:
+  flutter:
     sdk: 'flutter'
-  general_lib: '^0.0.46'
-  general_lib_flutter: '^0.0.27'
+  general_lib: '^0.0.49'
+  general_lib_flutter: '^0.0.30'
   path: '^1.9.0'
   universal_io: '^2.2.2'
-dev_dependencies: 
-  flutter_test: 
+dev_dependencies:
+  flutter_test:
     sdk: 'flutter'
-  flutter_lints: '^4.0.0'
+  flutter_lints: '^5.0.0'
 flutter: null
 publish_to: 'none'
-dependency_overrides: 
+dependency_overrides:
   pointycastle: '3.8.0'
+  mime: '^2.0.0'
